--- a/music/demos/index.html
+++ b/music/demos/index.html
@@ -11,6 +11,7 @@ limitations under the License.
 ==============================================================================-->
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -18,6 +19,7 @@ limitations under the License.
   <link rel="stylesheet" href="./style.css">
   <title>MagentaMusic.js demos</title>
 </head>
+
 <body>
   <h1>MagentaMusic.js demos</h1>
 
@@ -43,6 +45,7 @@ limitations under the License.
         <li><a href="groovae.html">MusicVAE for humanizing drum performances</a></li>
         <li><a href="transcription.html">Piano transcription with Onsets and Frames</a></li>
         <li><a href="piano_genie.html">Enable novice musical improvisation with Piano Genie</a></li>
+        <li><a href="gansynth.html">Neural audio synthesis with GANSynth</a></li>
       </ul>
     </h3>
   </section>
